<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_weight="1"
    android:background="#fff">
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" android:layout_margin="5dp"
        android:orientation="vertical">
        <TableRow android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView android:id="@+id/user_nameLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_NickName"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_nameTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow android:id="@+id/AgeTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/user_AgeLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_Age"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_AgeTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow android:id="@+id/GenderTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/user_GenderLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_Gender"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_GenderTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow android:id="@+id/WeightTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/user_WeightLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_Weight"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_WeightTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow android:id="@+id/HeightTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/user_HeightLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_Height"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_HeightTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/CaltableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                style="@style/UserLabelTextView"
                android:id="@+id/user_CalLabelTextView"
                android:text="@string/User_Cal"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp" />

            <TextView
                style="@style/UserTextView"
                android:id="@+id/user_CalTextView"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp" />
        </TableRow>

        <TableRow android:id="@+id/GoalTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView android:id="@+id/user_GoalLabelTextView"
                style="@style/UserLabelTextView"
                android:text="@string/User_Goal"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
            <TextView android:id="@+id/user_GoalTextView"
                style="@style/UserTextView"
                android:textColor="#000"
                android:textSize="19sp"></TextView>
        </TableRow>

        <TableRow
            android:id="@+id/emailTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                style="@style/UserLabelTextView"
                android:id="@+id/user_EmailLabelTextView"
                android:text="@string/User_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="19sp" />

            <TextView
                style="@style/UserTextView"
                android:id="@+id/user_EmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="19sp" />
        </TableRow>

        <TableRow
            android:id="@+id/ButtonTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:gravity="right"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_resetButton"
                android:id="@+id/user_resetButton"
                android:background="@drawable/button_blue"
                android:textSize="18sp"
                android:textColor="#ffffffff"
                android:layout_gravity="left" />

            <Button
                android:id="@+id/user_editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_editButton"
                android:background="@drawable/button_blue"
                android:textColor="#ffffffff"
                android:textSize="18sp"
                android:layout_gravity="right" />

        </TableRow>
    </TableLayout>
</ScrollView>
