<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" android:layout_weight="1"
    android:background="#fff"
    android:fillViewport="false"
    android:id="@+id/ScorllView">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/w_menupage__linearLayout1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:textSize="45sp"
            android:textColor="#000"
            android:text="@string/menupage_menupage"
            android:id="@+id/menupage_titleTextView"
            android:layout_gravity="center"
            android:gravity="left"
            android:textStyle="bold|italic" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dip"
            android:layout_gravity="center_horizontal"
            android:minHeight="54dip"
            android:orientation="horizontal"
            android:id="@+id/w_menupage__linearLayout2"
            >
            <Button
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_gravity="left"
                android:layout_marginRight="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_userButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_user" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="right"
                android:layout_marginLeft="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_changeButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_change" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dip"
            android:layout_gravity="center_horizontal"
            android:minHeight="54dip"
            android:orientation="horizontal"
            android:id="@+id/w_menupage__linearLayout3"
            >
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:layout_gravity="left"
                android:layout_marginRight="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_activityButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_activity" />
            <Button
                android:layout_width="85dp"
                android:layout_height="70dp"
                android:layout_gravity="right"
                android:layout_marginLeft="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_nutritionButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_nutrition" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dip"
            android:layout_gravity="center_horizontal"
            android:minHeight="54dip"
            android:orientation="horizontal"
            android:id="@+id/w_menupage__linearLayout4"
            >
            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="left"
                android:layout_marginRight="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_teamButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_team" />
            <Button
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_gravity="right"
                android:layout_marginLeft="45dp"
                android:textColor="#fff"
                android:background="@drawable/button_blue"
                android:id="@+id/menupage_duelButton"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/menupage_duel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
